# serqlane

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  flake.nix  index.html  introduction.html  justfile  magics.serq  mkdocs.yml  pyproject.toml  writing-serqlane.html
.github/: CODEOWNERS
.github/workflows/: build.yml  docs.yml  pages.yml  tests.yml
docs/: CNAME  index.md  introduction.md  language-reference.md  writing-serqlane.md
search/: search_index.json
serqlane/: __main__.py  astcompiler.py  common.py  grammar.lark  new_parser.py  parser.py  serq_ast.py  tokenizer.py  transformer.py  vm.py
serqlib/: magics.serq
serqlib/std/: debug.serq  macros.serq
tests/: conftest.py  test_benchmarks.py  test_binary_operators.py  test_binary_operators.serq  test_blocks.py  test_const.py  test_control_flow.py  test_functions.py  test_fuzzy.py  test_imports.py  test_literals.py  test_loops.py  test_reserved_keywords.py  test_struct.py  test_types.py  test_unary_operators.py  test_variables.py
tests/serqtests/: test_binary_operators.serq  test_blocks.serq  test_functions.serq  test_literals.serq  test_loops.serq
