[tool.poetry]
name = "serqlane"
version = "0.1.0"
description = "the serqlane programming language"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
serqlane = "serqlane.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
