[tool.poetry]
name = "serqlane"
version = "0.1.0"
description = "the serqlane programming language"
authors = ["StarrFox <starrfox6312@gmail.com>", "SirOlaf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.fuzz]
optional = true

[tool.poetry.group.fuzz.dependencies]
hypothesis = {extras = ["lark"], version = "^6.91.0"}

[tool.poetry.group.benchmarks]
optional = true

[tool.poetry.group.benchmarks.dependencies]
pytest-benchmark = "^4.0.0"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
serqlane = "serqlane.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
